--- a/grafana-dashboard-configmap.yaml
+++ b/grafana-dashboard-configmap.yaml
@@ -2,7 +2,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: grafana-dashboard-config
-  namespace: grafana-operator
+  namespace: grafana-dashboard
 data:
   grafana-dashboard.json: |-
     {
