--- a/grafana-dashboard-configmap.yaml
+++ b/grafana-dashboard-configmap.yaml
@@ -46,8 +46,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -106,8 +106,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "expr": "sum (rate (container_cpu_usage_seconds_total{id=\"/\",kubernetes_io_hostname=~\".*\"}[1m])) / sum (machine_cpu_cores{kubernetes_io_hostname=~\".*\"}) * 100",
@@ -122,8 +122,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -182,8 +182,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "expr": "sum (container_memory_working_set_bytes{id=\"/\",kubernetes_io_hostname=~\".*\"}) / sum (machine_memory_bytes{kubernetes_io_hostname=~\".*\"}) * 100",
@@ -198,8 +198,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "description": "",
           "fieldConfig": {
@@ -282,8 +282,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "expr": "sum (rate (container_network_receive_bytes_total{kubernetes_io_hostname=~\".*\"}[1m]))",
@@ -295,8 +295,8 @@ data:
             },
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "expr": "- sum (rate (container_network_transmit_bytes_total{kubernetes_io_hostname=~\".*\"}[1m]))",
@@ -313,8 +313,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -364,8 +364,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "exemplar": false,
@@ -381,8 +381,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -432,8 +432,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "expr": "sum (machine_cpu_cores{kubernetes_io_hostname=~\".*\"})",
@@ -448,8 +448,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -499,8 +499,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "expr": "sum (container_memory_working_set_bytes{id=\"/\",kubernetes_io_hostname=~\".*\"})",
@@ -515,8 +515,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -566,8 +566,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "expr": "sum (machine_memory_bytes{kubernetes_io_hostname=~\".*\"})",
@@ -595,8 +595,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -644,8 +644,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "exemplar": false,
@@ -662,8 +662,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "description": "",
           "fieldConfig": {
@@ -717,8 +717,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "exemplar": false,
@@ -734,8 +734,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "description": "",
           "fieldConfig": {
@@ -789,8 +789,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "exemplar": false,
@@ -807,8 +807,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "description": "",
           "fieldConfig": {
@@ -865,8 +865,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "exemplar": false,
@@ -884,8 +884,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "description": "",
           "fieldConfig": {
@@ -944,8 +944,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "exemplar": false,
@@ -963,8 +963,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -1022,8 +1022,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "exemplar": false,
@@ -1041,8 +1041,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -1090,8 +1090,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "exemplar": false,
@@ -1108,8 +1108,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -1168,8 +1168,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "exemplar": false,
@@ -1187,8 +1187,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "description": "",
           "fieldConfig": {
@@ -1237,8 +1237,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "exemplar": false,
@@ -1255,8 +1255,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "description": "",
           "fieldConfig": {
@@ -1313,8 +1313,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "exemplar": false,
@@ -1332,8 +1332,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "description": "",
           "fieldConfig": {
@@ -1392,8 +1392,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "exemplar": false,
@@ -1411,8 +1411,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -1470,8 +1470,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "exemplar": false,
@@ -1502,8 +1502,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -1588,8 +1588,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "expr": "DCGM_FI_DEV_GPU_TEMP{instance=~\".*\", gpu=~\".*\"}",
@@ -1604,8 +1604,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -1690,8 +1690,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "expr": "DCGM_FI_DEV_POWER_USAGE{instance=~\".*\", gpu=~\".*\"}",
@@ -1706,8 +1706,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -1793,8 +1793,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "expr": "DCGM_FI_DEV_SM_CLOCK{instance=~\".*\", gpu=~\".*\"} * 1000000",
@@ -1811,8 +1811,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -1899,8 +1899,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "expr": "DCGM_FI_DEV_GPU_UTIL{instance=~\".*\", gpu=~\".*\"}",
@@ -1915,8 +1915,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -2001,8 +2001,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "exemplar": false,
@@ -2018,8 +2018,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -2103,8 +2103,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "expr": "DCGM_FI_DEV_FB_USED{instance=~\".*\", gpu=~\".*\"}",
@@ -2119,8 +2119,8 @@ data:
         },
         {
           "datasource": {
-            "type": "prometheus",
-            "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+            "type": "prometheus"
+            
           },
           "fieldConfig": {
             "defaults": {
@@ -2207,8 +2207,8 @@ data:
           "targets": [
             {
               "datasource": {
-                "type": "prometheus",
-                "uid": "7f42a3c6-3db0-4382-9eef-5fec03bfc33f"
+                "type": "prometheus"
+                
               },
               "editorMode": "code",
               "expr": "DCGM_FI_PROF_PIPE_TENSOR_ACTIVE{instance=~\".*\", gpu=~\".*\"}",
