--- a/grafana-dashboard-configmap.yaml
+++ b/grafana-dashboard-configmap.yaml
@@ -949,7 +949,7 @@ data:
               },
               "editorMode": "code",
               "exemplar": false,
-              "expr": "DCGM_FI_DEV_GPU_TEMP{gpu=~\".*\"}",
+              "expr": "max by (instance,gpu) (DCGM_FI_DEV_GPU_TEMP{gpu=~\".*\"})",
               "format": "time_series",
               "instant": true,
               "interval": "",
@@ -1027,7 +1027,7 @@ data:
               },
               "editorMode": "code",
               "exemplar": false,
-              "expr": "DCGM_FI_DEV_POWER_USAGE{gpu=~\".*\"}",
+              "expr": "max by (instance,gpu) (DCGM_FI_DEV_POWER_USAGE{gpu=~\".*\"})",
               "format": "time_series",
               "instant": true,
               "interval": "",
@@ -1397,7 +1397,7 @@ data:
               },
               "editorMode": "code",
               "exemplar": false,
-              "expr": "DCGM_FI_DEV_MEMORY_TEMP{gpu=~\".*\"}",
+              "expr": "max by (instance,gpu) (DCGM_FI_DEV_MEMORY_TEMP{gpu=~\".*\"})",
               "format": "time_series",
               "instant": true,
               "interval": "",
@@ -1475,7 +1475,7 @@ data:
               },
               "editorMode": "code",
               "exemplar": false,
-              "expr": "DCGM_FI_DEV_POWER_USAGE{gpu=~\".*\"}",
+              "expr": "max by (instance,gpu) (DCGM_FI_DEV_POWER_USAGE{gpu=~\".*\"})",
               "format": "time_series",
               "instant": true,
               "interval": "",
